--- a/TheWorld/Views/App/Trips.cshtml
+++ b/TheWorld/Views/App/Trips.cshtml
@@ -2,10 +2,19 @@
 @model IEnumerable<Trip>
 
 @{
-  ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home Page";
 }
-<div class="row">
-    
+@section Scripts {
+    <script src="~/lib/angular/angular.min.js"></script>
+    <script src="~/js/app-trips.js"></script>
+    <script src="~/js/tripsController.js"></script>
+}
+<div class="row" ng-app="app-trips">
+
+    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3 text-center">
+        {{ vm.name }}
+    </div>
+
     <div class="col-md-6">
         <h1>The World</h1>
         <p>This will be a fun website soon!</p>
@@ -23,10 +32,10 @@
             </div>
         </form>
     </div>
-    
+
     <div class="col-md-6" col-xs>
         <h2>The Map</h2>
-        
+
         <ul>
             @foreach (var item in Model)
             {
@@ -34,6 +43,6 @@
             }
         </ul>
     </div>
-    
+
 
 </div>
